College Template : Stacked CTAs Spacing https://bugify.idfive.com/issues/27657

--- a/src/components/pages/_college-template.scss
+++ b/src/components/pages/_college-template.scss
@@ -634,7 +634,6 @@
   }
   .iastate22-button {
     @extend %iastate22-button--reverse;
-    margin-top: rem(30);
   }
 }
 
